# deforisk-jupyter-nb-v2

./: .gitignore  README.rst  main.py  pyproject.toml
component/script/: __init__.py  far_helpers.py  geo_utils.py
component/script/gee/: dask_ee_raster_export.py  dask_ee_vector_export.py  ee_fao_gaul.py  ee_raster_export.py  ee_rasterize_unique_values.py
component/script/rasterio/: unmask.py
component/script/utilities/: file_filter.py  file_helpers.py  resources.py
component/script/xarray/: dask_distance_xarray_spatial.py  dask_reproject_rio.py
notebooks/: 1.get_variables.ipynb  1.get_variables_dask.ipynb  2.process_data.ipynb  2.process_data_dask.ipynb  2.process_data_sepal.ipynb  3.benchmark_jnr_model.ipynb  5.1.far_models_sampling.ipynb  5.2.far_glm.ipynb  5.3.far_icar.ipynb  5.4.far_rf.ipynb  6.models_evaluation.ipynb  7.deforestation_allocation.ipynb
notebooks/.ipynb_checkpoints/: 1.get_variables_dask-checkpoint.ipynb
notebooks_dask/: 1.get_variables_dask.ipynb  2.process_data_dask.ipynb  3.benchmark_jnr_model_dask.ipynb
